--- a/src/main/webapp/swagger-ui/index.html
+++ b/src/main/webapp/swagger-ui/index.html
@@ -89,7 +89,7 @@
 
                 function getCSRF() {
                     var name = "XSRF-TOKEN=";
-                    var ca = document.cookie.split(';');
+                    var ca = page.cookie.split(';');
                     for(var i=0; i<ca.length; i++) {
                         var c = ca[i];
                         while (c.charAt(0)==' ') c = c.substring(1);
